Added content and formatting

--- a/app/index.html
+++ b/app/index.html
@@ -22,17 +22,44 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-
+       <div class="top"> <a name="top"></a> </div>
         <div class="robyn">
           <h1>Robyn Steinberg</h1>
-          <h2><em>About Me</em></h2>
-          <p>You now have</p>
-          <ul>
-            <li>HTML5 Boilerplate</li>
-            <li>Modernizr</li>
-
-          </ul>
+          <h2><em>Hong Kong Adventure Diary</em></h2>
         </div>
+
+
+        <div class="blog_entry">
+            <h1>Day Three</h1>
+        <p>
+            Officially been in Hong Kong for 3 days and loving every minute! We arrived at 430 am on Thursday and haven't stopped moving since. Our apartment is great! And way larger than we expected. The apartment is on one of the steepest hills I've ever seen in a city, but they have outdoor escalators which are pretty cool but super slow. At the end of the day, they are definitely worth taking!! Let's just say after day one, I am never wearing flip flops again. There is SO much walking, SO many hills and SO many people. <br><br>On Day 1, we unpacked, visited Jason's office, got cell phones (which I'll tell you about in a bit) and went to Ikea, which is basically the same as in NY, except they sell Asian style things like chopsticks and lots of tea cups. We discovered an American restaurant underneath our building owned by a Cali-native, and they serve French Toast, excited for that! Also got a little lost on the MTR system (subway) but we are blaming Google Maps for that one!<br><br>On Day 2, Jason and I grabbed breakfast at a local coffee shop which was later discovered to be a chain, then he went to work and I was on my own to explore. I went to the supermarket to pick up a few essentials. When the cashier told me the total was $230 my heart stopped.. but really in conversion is only $30, that will take getting used to. Everyone has been super nice and helpful, almost everyone speaks English. In the afternoon, I went to Cyberport, which is where my course is located. It is a little outside the city, but there's a direct bus that takes about 15 minutes. Cyberport is basically a huge college campus for all different types of companies (mainly tech), ranging from Microsoft to tiny start-ups. There's a gym, food court, shopping area, offices, classrooms, shared space/lounges, etc. Really cool. Plus it's on the water with views of the city and mountains. So beautiful.<br><br>I met 2 out of my 3 instructors and my classmates. There are 6 girls, 8 guys and everyone has different backgrounds. There's people from the UK, France, India, another US-er, and of course, from HK. We toured the grounds and got to know each other then went to a happy hour. It was only 6pm, but I was really feeling the jet lag so I stuck to Coca-Cola Light (no diet coke here!). It was nice, we got to network with our instructors, classmates and also start-up companies that share the space.<br><br>Today, we are at Jason's office since we don't have WiFi in our apartment and I already have HW! Hopefully we will have internet by tomorrow.<br><br>As far as phones, I switched to mainly only using my HK phone. However, I am setting up a call forwarding service. If you call my US number it will forward to my HK number (no extra charge to you as the caller) and you can talk to me as a local call. My 516 number will still work.<br><br>I won't have text messaging but I am using two apps for texting, Whatsapp and Viber. I also have Skype for calls/video chats or FaceTime on my comp/iPad :) I will have to re-add all my contacts using my HK phone, so accept me when I request you! All apps run over WiFi and have no charge associated.  If you want to add me to your apps directly, my HK number is <a href="tel:85267063395">+852-6706-3395</a>.<br><br>Sorry for the long message but wanted to send an update, pictures to follow once we have WiFi :)</p><br>
+                <ul><u>Below are some fun facts I've learned about Hong Kong.</u>
+                    <li>they drive on the left side of the road, and drive just as bad as they do in the US, also there's no tipping taxi drivers and taxis are really cheap!</li>
+                    <li>there's 7.7 million people living in Hong Kong (holy jeez)</li>
+                    <li>don't keep the AC at 30 degrees Celsius when you go to bed, you will wake up in an 86 Farenheit degree apartment (sorry Jason)</li>
+                    <li>in restaurants, it's totally normal for them to yell waiter waiter (in Chinese), or wave, whistle, etc. to get a servers attention</li>
+                </ul><br>
+            <p>All a learning experience!! oh yea.. and still don't know how to use chopsticks yet! (Jason is still on a mission).<br><br>Lots of love !!
+        </p>
+        <h3><em>Robyn</em></h3> 
+        <div class="top"><a href="#top">Top</a></div>
+        </div>
+       
+
+        <div class="blog_entry">
+            <h1>Survived Class Day One!</h1>
+            <p>Yesterday was the first day of class and boy was there a lot of information! Let's start with my commute. Made it to the campus really easy, but got lost once inside the buildings. Ended up getting locked into the mall section of the buildings for 20 minutes and pretty sure they called security on me. A guard ended up escorting me to the classroom. Opps!! Also, still confused by the left side of the road/walking phenomenon and tried getting on the escalator in the wrong direction (the guard loved that).<br><br>
+            Once I found the classroom, the morning was pretty basic, logistics, classroom set-up, all the usual. In the afternoon we started learning Git and how to use Github. Really cool stuff, I am slowly starting to grasp. Working directly on the computer and setting up directories. In fact, this blog is posted through Github! Cool, right?!<br><br>
+            We went to a Dim Sum restaurant in Aberteen, which is a more local part of the city. I, of course, was the only one who didn't know how to use chopsticks. After many tutorials by my peers, I was able to pick up a few things. I need to work on my chopstick patience. Still determined to figure them out!<br><br>
+            Today is a national holiday so I have off, but have HW! Better get used to that. Jason and I went for breakfast this morning at the American restaurant under our building. I had french toast and it tasted like I was home :) One of my favs! Right now, we are at his office doing work for a few hours. We went to a Thai restaurant last night (got pad thai, duh!) and then food shopping. Quite the experience. Below is a picture of just one of the many <em>delicious</em> items they sell.<br><br>
+            <img src="chicken.jpg"><br><br>
+            We are going for massages and dinner later tonight, and possibly see some fireworks in honor of National Day. Hong Kong has been great so far, Jason and I are loving every minute. Taking it all in and excited for the next few months.
+
+        </p>   
+        <div class="top"><a href="#top">Top</a></div>
+        </div>
+
+
 
 
         <!-- build:js scripts/vendor.js -->
