--- a/app/index.html
+++ b/app/index.html
@@ -48,16 +48,52 @@
 
         <div class="blog_entry">
             <h1>Survived Class Day One!</h1>
-            <p>Yesterday was the first day of class and boy was there a lot of information! Let's start with my commute. Made it to the campus really easy, but got lost once inside the buildings. Ended up getting locked into the mall section of the buildings for 20 minutes and pretty sure they called security on me. A guard ended up escorting me to the classroom. Opps!! Also, still confused by the left side of the road/walking phenomenon and tried getting on the escalator in the wrong direction (the guard loved that).<br><br>
+            <p>Yesterday was the first day of class and boy was there a lot of information! Let's start with my commute. Made it to the campus really easy, but got lost once inside the buildings. Ended up getting locked into the mall section of the buildings for 20 minutes and almost positive that they called security on me. A guard ended up escorting me to the classroom. Opps!! Also, still confused by the left side of the road/walking phenomenon and tried getting on the escalator in the wrong direction (the guard loved that).<br><br>
             Once I found the classroom, the morning was pretty basic, logistics, classroom set-up, all the usual. In the afternoon we started learning Git and how to use Github. Really cool stuff, I am slowly starting to grasp. Working directly on the computer and setting up directories. In fact, this blog is posted through Github! Cool, right?!<br><br>
             We went to a Dim Sum restaurant in Aberteen, which is a more local part of the city. I, of course, was the only one who didn't know how to use chopsticks. After many tutorials by my peers, I was able to pick up a few things. I need to work on my chopstick patience. Still determined to figure them out!<br><br>
             Today is a national holiday so I have off, but have HW! Better get used to that. Jason and I went for breakfast this morning at the American restaurant under our building. I had french toast and it tasted like I was home :) One of my favs! Right now, we are at his office doing work for a few hours. We went to a Thai restaurant last night (got pad thai, duh!) and then food shopping. Quite the experience. Below is a picture of just one of the many <em>delicious</em> items they sell.<br><br>
             <img src="chicken.jpg"><br><br>
-            We are going for massages and dinner later tonight, and possibly see some fireworks in honor of National Day. Hong Kong has been great so far, Jason and I are loving every minute. Taking it all in and excited for the next few months.
-
+            We are going for massages and dinner later tonight, and possibly see some fireworks in honor of National Day. Hong Kong has been great so far, Jason and I are loving every minute. Taking it all in and are so excited for what's to come. Will try to update this on the regular. Much love!!
         </p>   
         <div class="top"><a href="#top">Top</a></div>
         </div>
+
+
+    <p><strong>Below form is a work in progress. Not functioning yet!</strong></p>
+    <div class="comments">
+        <form name="htmlform" method="post" action="html_form_send.php">
+        <table width="450px">
+        <tr>
+        <td valign="top">
+        <label for="first_name">Name</label>
+        </td>
+        <td valign="top">
+        <input  type="text" name="first_name" maxlength="50" size="30">
+        </td>
+        </tr>
+        <tr>
+        <td valign="top">
+          <label for="comments">Comments</label>
+        </td>
+        <td valign="top">
+          <textarea  name="comments" maxlength="5000" cols="98" rows="6"></textarea>
+        </td>
+     
+        </tr>
+        <tr>
+        <td colspan="2" style="text-align:center">
+            <input type="submit" value="Submit">
+        </td>
+        </tr>
+        </table>
+    </form>
+    </div>
+
+
+    <div class="contact">
+            <p><strong><u>Contact me!</u></strong><br><br>
+            Phone: <a href="tel:85267063395">+852-6706-3395</a><br>Email: <a href="mailto:robynsteinberg@gmail.com">robynsteinberg@gmail.com</a></p>
+    </div>
 
 
 
@@ -83,3 +119,4 @@
         <!-- endbuild -->
 </body>
 </html>
+
