--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             Once I found the classroom, the morning was pretty basic, logistics, classroom set-up, all the usual. In the afternoon we started learning Git and how to use Github. Really cool stuff, I am slowly starting to grasp. Working directly on the computer and setting up directories. In fact, this blog is posted through Github! Cool, right?!<br><br>
             We went to a Dim Sum restaurant in Aberteen, which is a more local part of the city. I, of course, was the only one who didn't know how to use chopsticks. After many tutorials by my peers, I was able to pick up a few things. I need to work on my chopstick patience. Still determined to figure them out!<br><br>
             Today is a national holiday so I have off, but have HW! Better get used to that. Jason and I went for breakfast this morning at the American restaurant under our building. I had french toast and it tasted like I was home :) One of my favs! Right now, we are at his office doing work for a few hours. We went to a Thai restaurant last night (got pad thai, duh!) and then food shopping. Quite the experience. Below is a picture of just one of the many <em>delicious</em> items they sell.<br><br>
-            <img src="chicken.jpg"><br><br>
+            <img src="images/chicken.jpg"><br><br>
             We are going for massages and dinner later tonight, and possibly see some fireworks in honor of National Day. Hong Kong has been great so far, Jason and I are loving every minute. Taking it all in and are so excited for what's to come. Will try to update this on the regular. Much love!!
         </p>   
         <div class="top"><a href="#top">Top</a></div>
